--- a/style.css
+++ b/style.css
@@ -1,39 +1,94 @@
-body {
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; /* Hide scrollbars */
     background-color: black;
-}
+  }
 
 @keyframes titlefade {
-    0%   { color:rgba(125, 80, 140, 0);    
-        max-width: 0px;
-         top: 25%;
+    0%   { 
+        color:rgba(125, 80, 140, 0);    
+
         }
-    100% { color:rgba(125, 80, 140, 100); 
-        max-width: 100px;
-        top: 50%;
+    100% { color:rgba(255, 255, 255, 50); 
+
     
         text-transform:inherit;}
   }
 
 
+  @keyframes bgfade {
+    0%   { 
+        opacity: 0;
+        }
+    100% {     opacity: 0.15;}
+  }
+
+  .bg {
+
+    opacity: 0.15;
+    /* Full height */
+    height: 150%;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    user-select: none;
+    -webkit-user-select: none;
+
+ 
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+
+    
+    animation-name: bgfade;
+    animation-duration: 4s;
+
+  }
+
 .title {
     position: absolute;
-    width: 100px;
+    width: 200px;
     height: 50px;
     top: 50%;
     left: 50%;
     margin-left: -50px; /* margin is -0.5 * dimension */
     margin-top: -25px; 
 
-    white-space: nowrap;
-    overflow: hidden;
 
-    max-width: 100px;
-
-    font-family:Arial, Helvetica, sans-serif;
-    color:rgba(125, 80, 140, 100);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: thin;
+    color:rgba(255, 255, 255, 50);
 
     animation-name: titlefade;
-    animation-duration: 2s;
+    animation-duration: 4s;
+
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.funy {
+    position: absolute;
+    width: 500px;
+    height: 50px;
+    top: 54%;
+    left: 50%;
+    margin-left: -150px; /* margin is -0.5 * dimension */
+    margin-top: -25px; 
+
+
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: thin;
+    color:rgba(255, 255, 255, 50);
+
+    animation-name: titlefade;
+    animation-duration: 11s;
 
     user-select: none;
     -webkit-user-select: none;
